--- a/index.html
+++ b/index.html
@@ -2,31 +2,39 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>북맵 — 메인</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; background: #fafafa; }
-    header { background: #1a73e8; color: white; padding: 15px; text-align: center; font-size: 20px; font-weight: bold; }
-    main { display: flex; flex-direction: column; align-items: center; justify-content: center; height: calc(100vh - 120px); }
-    main p { font-size: 16px; color: #444; margin-bottom: 25px; text-align: center; }
-    .buttons { display: flex; gap: 15px; }
-    .buttons a {
-      display: inline-block; padding: 12px 20px; border: 2px solid #1a73e8; border-radius: 8px;
-      background: white; color: #1a73e8; text-decoration: none; font-weight: bold; transition: 0.2s;
-    }
-    .buttons a:hover { background: #1a73e8; color: white; }
-    footer { padding: 12px; text-align: center; font-size: 13px; color: #666; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BookMap — 메인</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>📚 북맵 (BookMap)</header>
-  <main>
-    <p>도서를 등록하거나 분야별로 분류된 리스트를 확인해보세요.</p>
-    <div class="buttons">
-      <a href="form.html">✍️ 도서 등록</a>
-      <a href="book.html">📖 도서 리스트</a>
+<body class="bg-gray-50 text-gray-800">
+  <!-- 상단 네비게이션 -->
+  <header class="bg-blue-600 text-white shadow">
+    <div class="max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold">📚 BookMap</h1>
+      <nav class="text-sm">
+        <a href="index.html" class="hover:underline">홈</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- 메인 컨텐츠 -->
+  <main class="max-w-3xl mx-auto px-6 py-20 text-center">
+    <h2 class="text-4xl font-extrabold mb-6">BookMap</h2>
+    <p class="text-lg text-gray-600 mb-10">
+      당신의 독서 경험을 통해, 많은 이들에게 독서 지도를 만들어주세요.
+    </p>
+
+    <!-- 버튼 -->
+    <div class="flex justify-center gap-6">
+      <a href="form.html"
+         class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow hover:bg-blue-700 transition">
+        도서 등록
+      </a>
+      <a href="book.html"
+         class="px-6 py-3 bg-gray-200 text-gray-800 rounded-xl shadow hover:bg-gray-300 transition">
+        북맵 리스트
+      </a>
     </div>
   </main>
-  <footer>© 2025 BookMap</footer>
 </body>
 </html>
