--- a/book.html
+++ b/book.html
@@ -2,144 +2,122 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>북맵 — 도서 리스트</title>
-  <style>
-    body { font-family: sans-serif; margin: 20px; background: #fafafa; }
-    h1 { text-align: center; margin-bottom: 20px; }
-
-    .filters { margin-bottom: 20px; }
-    .filter-group { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin: 10px 0; }
-    .filter-group h3 { flex-basis: 100%; text-align: center; font-size: 14px; color: #444; margin-bottom: 5px; }
-
-    .filters button {
-      padding: 6px 12px; border: 1px solid #ccc; border-radius: 20px;
-      background: white; cursor: pointer; font-size: 14px;
-    }
-    .filters button.active { background: #1a73e8; color: white; border-color: #1a73e8; }
-
-    .book-list { display: grid; grid-template-columns: repeat(auto-fill,minmax(220px,1fr)); gap: 20px; }
-    .card {
-      background: white; border-radius: 10px; padding: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1); display: flex; flex-direction: column;
-      transition: transform 0.2s;
-    }
-    .card:hover { transform: scale(1.02); }
-    .card img { width: 100%; height: 180px; object-fit: contain; border-radius: 6px; background: #f0f0f0; }
-    .title { font-weight: bold; margin: 10px 0 6px; font-size: 15px; }
-    .meta { font-size: 13px; color: #666; }
-
-    .loading { text-align: center; margin: 20px; display: none; }
-    .nav { text-align: center; margin-top: 20px; }
-    .nav a { margin: 0 10px; text-decoration: none; color: #1a73e8; font-weight: bold; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BookMap — 북맵 리스트</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>📚 도서 리스트</h1>
+<body class="bg-gray-50 text-gray-800">
+  <!-- 상단 네비게이션 -->
+  <header class="bg-blue-600 text-white shadow">
+    <div class="max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-xl font-bold">📚 BookMap</h1>
+      <nav class="text-sm">
+        <a href="index.html" class="hover:underline">홈</a> ·
+        <span class="font-semibold">북맵 리스트</span>
+      </nav>
+    </div>
+  </header>
 
-  <div id="filters" class="filters"></div>
-  <div id="loading" class="loading">📡 불러오는 중...</div>
-  <div id="bookList" class="book-list"></div>
+  <!-- 메인 컨텐츠 -->
+  <main class="max-w-6xl mx-auto px-6 py-10">
+    <h2 class="text-2xl font-bold mb-6">북맵 리스트</h2>
 
-  <div class="nav">
-    <a href="index.html">🏠 홈</a>
-  </div>
+    <!-- 필터 영역 -->
+    <div class="mb-8 bg-white p-6 rounded-2xl shadow">
+      <h3 class="text-lg font-semibold mb-4">필터</h3>
+      <div class="flex flex-wrap gap-4">
+        <!-- 카테고리 필터 -->
+        <input id="categoryFilter" type="text" placeholder="카테고리 입력 (쉼표로 구분)"
+          class="flex-1 px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500"/>
+        
+        <!-- 단계 필터 -->
+        <select id="levelFilter"
+          class="px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
+          <option value="">전체 단계</option>
+          <option value="입문">입문</option>
+          <option value="초급">초급</option>
+          <option value="중급">중급</option>
+          <option value="고급">고급</option>
+          <option value="전문">전문</option>
+        </select>
+
+        <button id="filterBtn"
+          class="px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+          적용
+        </button>
+      </div>
+    </div>
+
+    <!-- 도서 리스트 -->
+    <div id="bookList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- 카드들이 JS로 채워집니다 -->
+    </div>
+  </main>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbygL5W_rVDTMkPIjLiSjDVN5nxRaZgHTIW3vbJgTgOL_Z_IwLF4k97VEd1bQNfxqAs1_A/exec";
-    const loading = document.getElementById("loading");
+    const API_URL = "https://script.google.com/macros/s/AKfycbwcJ2aaqVvEhxcGdJakKjsmizPBNXzScw2NVWsQ2VNammR0bncJpk68NOYcjgUW6wOf/exec";
     const bookList = document.getElementById("bookList");
-    const filters = document.getElementById("filters");
+    const filterBtn = document.getElementById("filterBtn");
 
-    let books = [];
-    let activeFilter = "전체보기";
-
-    // 기본 카테고리 + 난이도
-    const DEFAULT_CATEGORIES = ["철학", "역사", "문학", "종교", "예술", "사회과학", "자연과학"];
-    const FIXED_LEVELS = ["입문", "초급", "중급", "고급", "전문"];
-
+    // 도서 데이터 불러오기
     async function fetchBooks() {
-      loading.style.display = "block";
-      try {
-        const res = await fetch(API_URL);
-        books = await res.json();
-        renderFilters();
-        renderBooks();
-      } catch (err) {
-        alert("❌ 도서 불러오기 실패");
-      } finally {
-        loading.style.display = "none";
-      }
+      const res = await fetch(API_URL);
+      const data = await res.json();
+      return data;
     }
 
-    function renderFilters() {
-      filters.innerHTML = "";
-
-      // 전체보기
-      const allBtn = createFilterButton("전체보기");
-      filters.appendChild(allBtn);
-
-      // 카테고리 그룹
-      const categoryGroup = document.createElement("div");
-      categoryGroup.className = "filter-group";
-      categoryGroup.innerHTML = "<h3>📂 카테고리</h3>";
-
-      const categories = new Set(DEFAULT_CATEGORIES);
-      books.forEach(book => {
-        if (book.category) {
-          const cats = Array.isArray(book.category) ? book.category : book.category.split(",");
-          cats.forEach(c => categories.add(c.trim()));
-        }
-      });
-      categories.forEach(cat => categoryGroup.appendChild(createFilterButton(cat)));
-      filters.appendChild(categoryGroup);
-
-      // 레벨 그룹
-      const levelGroup = document.createElement("div");
-      levelGroup.className = "filter-group";
-      levelGroup.innerHTML = "<h3>📊 난이도</h3>";
-
-      FIXED_LEVELS.forEach(lvl => levelGroup.appendChild(createFilterButton(lvl)));
-      filters.appendChild(levelGroup);
-    }
-
-    function createFilterButton(label) {
-      const btn = document.createElement("button");
-      btn.textContent = label;
-      if (label === activeFilter) btn.classList.add("active");
-      btn.addEventListener("click", () => {
-        activeFilter = label;
-        renderFilters();
-        renderBooks();
-      });
-      return btn;
-    }
-
-    function renderBooks() {
+    // 도서 리스트 렌더링
+    function renderBooks(books) {
       bookList.innerHTML = "";
-      books
-        .filter(book => {
-          if (activeFilter === "전체보기") return true;
-          const catMatch = book.category && book.category.includes(activeFilter);
-          const lvlMatch = book.level && book.level.includes(activeFilter);
-          return catMatch || lvlMatch;
-        })
-        .forEach(book => {
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <img src="${book.cover || 'https://via.placeholder.com/150x200?text=No+Cover'}" alt="${book.title}">
-            <div class="title">${book.title}</div>
-            <div class="meta">${book.author || ''} | ${book.publisher || ''}</div>
-          `;
-          card.addEventListener("click", () => {
-            window.location.href = `book-detail.html?title=${encodeURIComponent(book.title)}`;
-          });
-          bookList.appendChild(card);
-        });
+      if (books.length === 0) {
+        bookList.innerHTML = `<p class="col-span-full text-center text-gray-500">검색된 도서가 없습니다.</p>`;
+        return;
+      }
+
+      books.forEach((book) => {
+        const card = document.createElement("div");
+        card.className = "bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col";
+
+        card.innerHTML = `
+          <img src="${book.image || 'https://via.placeholder.com/150x220?text=No+Cover'}"
+               alt="${book.title}" 
+               class="w-full h-56 object-cover rounded-lg mb-4">
+          <h3 class="text-lg font-bold mb-2">${book.title}</h3>
+          <p class="text-sm text-gray-600">저자: ${book.author || "-"}</p>
+          <p class="text-sm text-gray-600">출판사: ${book.publisher || "-"}</p>
+          <p class="text-xs text-gray-500 mt-2">단계: ${book.level || "-"}</p>
+          <a href="book-detail.html?id=${book.id}"
+             class="mt-auto inline-block text-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">
+             상세보기
+          </a>
+        `;
+        bookList.appendChild(card);
+      });
     }
 
-    fetchBooks();
+    // 필터 적용
+    filterBtn.addEventListener("click", async () => {
+      const categoryInput = document.getElementById("categoryFilter").value.trim();
+      const level = document.getElementById("levelFilter").value;
+      
+      const books = await fetchBooks();
+      const filtered = books.filter(book => {
+        let ok = true;
+        if (categoryInput) {
+          const categories = categoryInput.split(",").map(c => c.trim());
+          ok = categories.some(c => book.category?.includes(c));
+        }
+        if (level && book.level !== level) ok = false;
+        return ok;
+      });
+      renderBooks(filtered);
+    });
+
+    // 최초 로드
+    (async () => {
+      const books = await fetchBooks();
+      renderBooks(books);
+    })();
   </script>
 </body>
 </html>
